# wsh

./: .gitattributes  .gitignore  .gitmodules  404.html  Cargo.toml  LICENSE  README.md  index.html  intro.html  justfile  posix-migration.html  print.html  searchindex.js  searchindex.json  status.html
crates/dumbwasm/: Cargo.toml  README.md
crates/dumbwasm/examples/: fib.dumbwasm
crates/dumbwasm/src/: cli.rs  lexer.rs  lib.rs  main.rs  writer.rs
crates/dumbwasm/src/writer/: error.rs  instructions.rs  mod.rs
crates/dumbwasm/tests/: tests.rs
crates/dumbwasm/tests/snapshots/: integration__bad_instruction.snap  integration__out_of_place_type_indicator_float.snap  integration__out_of_place_type_indicator_int.snap  integration__suggests_general_keywords.snap  integration__unclosed_array.snap  integration__unclosed_instrs.snap  integration__unclosed_section.snap  integration__unknown_char.snap
crates/shwasi-engine/: Cargo.toml  justfile
crates/shwasi-engine/benches/: benchmark.rs
crates/shwasi-engine/fuzz/: Cargo.toml
crates/shwasi-engine/fuzz/fuzz_targets/: module.rs  parse.rs
crates/shwasi-engine/src/: error.rs  instance.rs  lib.rs  ops.rs  store.rs  value.rs  values.rs  vm.rs
crates/shwasi-engine/src/instance/: host_func.rs  into_host_func.rs  mod.rs  wasm_func.rs
crates/shwasi-engine/src/module/: leb128.rs  mod.rs  parser.rs
crates/shwasi-engine/src/module/instr/: instruction.rs  mod.rs  opcode.rs
crates/shwasi-engine/src/store/: mod.rs  store_field.rs
crates/shwasi-engine/src/vm/: mod.rs  ops.rs
crates/shwasi-engine/src/vm/jit/: assembler.rs  call_graph.rs  debug.rs  executable.rs  mod.rs
crates/shwasi-engine/tests/: inputs.rs  pretty_fmt.rs  tests.rs
crates/shwasi-engine/tests/inputs/: bad_i32.wasm  bad_init_expr.wasm  bad_magic.wasm  bad_placeholder_byte.wasm  block_function.wasm  call_indirect.wasm  code_and_types.wasm  complex_init.wasm  data.wasm  elems.wasm  f32_init_expr.wasm  globals.wasm  init_expr_wrong_instr.wasm  placeholder_byte.wasm  prefix_byte.wasm  refnull_init.wasm  section_order.wasm  sign_extend.wasm  simple.wasm
crates/shwasi-engine/tests/inputs/dumbwasm/: bad_data_count.dumbwasm  bad_placeholder_byte.dumbwasm  bad_version.dumbwasm  data.dumbwasm  data_count.dumbwasm  f64_const.dumbwasm  placeholder_byte.dumbwasm  prefix_byte.dumbwasm  simple.dumbwasm
crates/shwasi-engine/tests/snapshots/: integration__bad_i32.snap  integration__block_function.snap  integration__call_indirect.snap  integration__can_parse_instructions_with_placeholders.snap  integration__code_and_types.snap  integration__complex_init.snap  integration__data.snap  integration__data_count.snap  integration__elems.snap  integration__f32_init_expr.snap  integration__f64_const.snap  integration__globals.snap  integration__import_section_order.snap  integration__import_table.snap  integration__prefix_byte.snap  integration__refnull_init.snap  integration__sign_extend.snap  integration__simple.snap
crates/shwasi-engine/tests/spectests/: mod.rs
crates/shwasi-engine/tests/spectests/wasm/: align_106.wasm  br_if_0.wasm  br_table_0.wasm  bulk_60.wasm  call_0.wasm  call_indirect_0.wasm  data_8.wasm  elem_11.wasm  elem_16.wasm  elem_2.wasm  elem_22.wasm  elem_24.wasm  elem_25.wasm  elem_4.wasm  elem_40.wasm  elem_6.wasm  elem_67.wasm  elem_7.wasm  elem_76.wasm  elem_92.wasm  elem_95.wasm  exports_38.wasm  exports_42.wasm  exports_59.wasm  float_exprs_626.wasm  float_exprs_629.wasm  float_exprs_794.wasm  float_exprs_817.wasm  func_0.wasm  func_90.wasm  func_97.wasm  func_ptrs_0.wasm  func_ptrs_12.wasm  if_0.wasm  imports_156.wasm  imports_159.wasm  imports_2.wasm  imports_6.wasm  imports_75.wasm  imports_8.wasm  (+86 more)
crates/shwasi-lang/: Cargo.toml  example.wsi  plan.txt
crates/shwasi-lang/fuzz/: Cargo.toml
crates/shwasi-lang/fuzz/fuzz_targets/: lex.rs  parse.rs
crates/shwasi-lang/src/interpreter/: builtins.rs  env.rs  error.rs  executor.rs  memfs.rs  mod.rs  os_handle.rs  value.rs
crates/shwasi-lang/src/interpreter/builtins/: allow.rs  cd.rs  load.rs  memfs.rs  mod.rs  source.rs  unload.rs  which.rs
crates/shwasi-lang/src/interpreter/memfs/: error.rs  mod.rs
crates/shwasi-lang/src/parser/: ast.rs  error.rs  mod.rs  symbol.rs
crates/shwasi-lang/tests/: tests.rs
crates/shwasi-parser/: Cargo.toml  justfile
crates/shwasi-parser/benches/: benchmark.rs
crates/shwasi-parser/benches/inputs/: shwasi.wasm
crates/shwasi-parser/fuzz/: Cargo.toml
crates/shwasi-parser/fuzz/fuzz_targets/: module.rs  parse.rs  validate.rs
crates/shwasi-parser/src/: lib.rs  module.rs  parser.rs  validator.rs
crates/shwasi-parser/src/instr/: instruction.rs  mod.rs  opcode.rs
crates/shwasi-parser/src/parser/: instr_reader.rs  mod.rs
crates/shwasi-parser/src/validator/: func_validator.rs  mod.rs
crates/shwasi-parser/tests/: inputs.rs  pretty_fmt.rs  tests.rs
crates/shwasi-parser/tests/inputs/: bad_data_count.wasm  bad_placeholder_byte.wasm  bad_version.wasm  blocktype.wasm  duplicate_sections.wasm  f64_const.wasm  import_call.wasm  import_call2.wasm  placeholder_byte.wasm  prefix_byte.wasm  read_overflow.wasm  signed_overflow.wasm  simple.wasm  stack_height2.wasm  valid_br_table.wasm
crates/shwasi-parser/tests/snapshots/: integration__bad_i32.snap  integration__block_function.snap  integration__blocktype.snap  integration__call_indirect.snap  integration__can_parse_instructions_with_placeholders.snap  integration__code_and_types.snap  integration__complex_init.snap  integration__data.snap  integration__data_count.snap  integration__elems.snap  integration__f32_init_expr.snap  integration__f64_const.snap  integration__globals.snap  integration__import_section_order.snap  integration__import_table.snap  integration__prefix_byte.snap  integration__refnull_init.snap  integration__sign_extend.snap  integration__simple.snap
crates/shwasi-parser/tests/spectests/: mod.rs
crates/wasi/: Cargo.toml
crates/wasi/src/: guest_memory.rs  lib.rs
crates/wasi/src/sync/: mod.rs
docs/: book.toml
src/: cli.rs  main.rs  (+2 more)
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  specgen.rs
(+1338 files in other folders)
