[package]
name = "shwasi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dhat = "0.3.2"
shwasi-parser = { path = "crates/shwasi-parser" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
dhat-heap = []

[workspace]
members = [
    "crates/shwasi-parser",
    "crates/dumbwasm",
    "crates/wasm-leb128",
    "xtask",
]

[workspace.lints.clippy]
all = "warn"
char_lit_as_u8 = "warn"
perf = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
filetype_is_file = "warn"
flat_map_option = "warn"
equatable_if_let = "warn"
float_cmp_const = "warn"
from_iter_instead_of_collect = "warn"
fallible_impl_from = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mismatched_target_os = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
manual_ok_or = "warn"
needless_borrow = "warn"
mem_forget = "warn"
needless_continue = "warn"
needless_collect = "warn"
option_if_let_else = "warn"
ref_option_ref = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unused_self = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
useless_transmute = "warn"
string_add = "warn"
str_to_string = "warn"
fn_params_excessive_bools = "warn"
format_push_string = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
as_underscore = "warn"
linkedlist = "warn"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
