[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { version = "4.4.6", features = ["derive"] }
wast = "66.0.2"
wat = "1.0.77"

[lints]
workspace = true
