[package]
name = "dumbwasm"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
path = "tests/tests.rs"

[lints]
workspace = true

[dependencies]
wasm-leb128 = { path = "../wasm-leb128" }
logos = "0.13.0"
snailquote = "0.3.1"
anyhow = "1.0.75"
byteorder = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
thiserror.workspace = true
console = "0.15.7"
strsim = "0.10.0"
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
assert_cmd = "2.0.12"
insta = "1.34.0"
pretty_assertions = "1.4.0"
tempdir = "0.3.7"
