[package]
name = "shwasi-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
paste.workspace = true
bitflags.workspace = true
num_enum.workspace = true
shwasi-parser = { path = "../shwasi-parser" }
stacker = "0.1.15"

# For JIT
[target.'cfg(target_arch = "aarch64")'.dependencies]
bitvec = "1.0.1"
smallvec = "1.11.2"
capstone = "0.11.0"
libc = "0.2.150"
rustc-hash = "1.1.0"

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
criterion.workspace = true
pretty_assertions = "1.4.0"

[[bench]]
name = "benchmark"
harness = false

[lints]
workspace = true
