[package]
name = "shwasi-lang"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
itertools.workspace = true
smol_str = "0.2.0"
dirs = "5.0.1"
os_pipe = "1.1.5"
filedescriptor = "0.8.2"
ariadne = { version = "0.4.0", features = ["auto-color"] }
shwasi-parser = { path = "../shwasi-parser" }
shwasi-engine = { path = "../shwasi-engine" }
shwasi-wasi = { path = "../wasi" }
which = "5.0.0"
cap-std = "2.0.1"
pathdiff = "0.2.1"
wiggle = "16.0.0"
system-interface = "0.27.0"
clap = { version = "4.4.16", features = ["derive", "string"] }
diffy = "0.3.0"
atty = "0.2.14"
path-absolutize = "3.1.1"

[target.'cfg(unix)'.dependencies]
rustix = "0.38.28"

[target.'cfg(windows)'.dependencies]
io-extras = "0.18.1"

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
