[package]
name = "shwasi-parser"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
path = "tests/tests.rs"

[[bench]]
name = "benchmark"
harness = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bitflags.workspace = true
byteorder = "1.5.0"
num_enum = "0.7.0"
wasm-leb128 = { path = "../wasm-leb128" }
itertools = "0.11.0"
rayon = "1.8.0"

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
criterion.workspace = true
insta = "1.34.0"
